--- a/main.html
+++ b/main.html
@@ -6,9 +6,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+
+	<style>
+        table {
+            width: 80%;
+            border-collapse: collapse;
+            margin: 20px auto;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: center;
+        }
+
+        th {
+            background-color: #f2f2;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        tr:hover {
+            background-color: #ddd;
+        }
+
+        caption {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
     <!-- add table here -->
+	<h1>COVID-19 Statistics</h1>
+
+<table>
+    <caption>COVID-19 Cases by Country</caption>
+    <thead>
+        <tr>
+            <th>Country</th>
+            <th>Total Cases</th>
+            <th>Active Cases</th>
+            <th>Recovered</th>
+            <th>Deaths</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>USA</td>
+            <td>5,432,123</td>
+            <td>1,234,567</td>
+            <td>3,987,654</td>
+            <td>209,902</td>
+        </tr>
+        <tr>
+            <td>India</td>
+            <td>4,567,890</td>
+            <td>456,789</td>
+            <td>4,100,000</td>
+            <td>11,101</td>
+        </tr>
+        <tr>
+            <td>Brazil</td>
+            <td>3,210,987</td>
+            <td>789,012</td>
+            <td>2,401,234</td>
+            <td>20,741</td>
+        </tr>
+        <tr>
+            <td>UK</td>
+            <td>2,345,678</td>
+            <td>123,456</td>
+            <td>2,200,000</td>
+            <td>22,222</td>
+        </tr>
+    </tbody>
+</table>
 
         
 </body>
